# optional

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  lwg-20250314.org  requirements-dev.in  requirements-dev.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  ci_tests.yml  codeql.yml  ossf-scorecard-analysis.yml  pre-commit-check.yml  pre-commit-update.yml  pre-commit.yml
cmake/: beman.optional-config.cmake.in  use-fetch-content.cmake
docs/: Doxyfile  examples.dox  mrdocs.yml  overview.md
etc/: clang-flags.cmake  gcc-16-toolchain.cmake  gcc-flags.cmake  gcc-toolchain.cmake
examples/: CMakeLists.txt  base_derived_cast.cpp  concept_checks.cpp  optional_ref.cpp  pythagorean_triples.cpp  range_loop.cpp  sample.cpp  std_vs_beman.cpp
include/beman/optional/: CMakeLists.txt  optional.hpp
include/beman/optional/detail/: iterator.hpp
include/beman/optional/detail/stl_interfaces/: iterator_interface.hpp
installtest/: CMakeLists.txt  test.cpp
papers/P2988/: Makefile  base-optional.tex  common.tex  ldiff.sh  new-optional.tex  new.tex  optional.hpp  optional_range_optimization.tex  optional_ref_wording.tex
papers/P2988/stdtex/: config.tex  macros.tex
scripts/: install-infra.sh  update-infra.sh
tests/beman/optional/: CMakeLists.txt  optional.t.cpp  optional.test.cpp  optional_constexpr.t.cpp  optional_constexpr.test.cpp  optional_monadic.t.cpp  optional_monadic.test.cpp  optional_range_support.t.cpp  optional_range_support.test.cpp  optional_ref.t.cpp  optional_ref.test.cpp  optional_ref_monadic.t.cpp  optional_ref_monadic.test.cpp  test_constructor_fail.cpp  test_types.hpp  test_utilities.hpp
